--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <title>Flickipedia</title>
   <link rel="stylesheet" href="./style.css">
 
+  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+
+  <script src="./pictures.js"></script>
+
 </head>
 <body>
   <div class="hey">HEY. i hear you like pictures and also images. WHAT KIND YOU WANT?! I GOT LOTS.</div>
@@ -14,7 +18,8 @@
     </form>
   </div>
   <div class="container">
-    <div class='image'> put yo image here</div>
+    <div class='image'>
+    </div>
     <div class='text'> put yo super informative text here</div>
   </div>
 
